[gd_scene load_steps=33 format=2]

[ext_resource path="res://ship_build/hexmap.gd" type="Script" id=1]
[ext_resource path="res://ship_build/component_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://ship_build/build_toolbar.gd" type="Script" id=4]
[ext_resource path="res://ship_build/ship_build.gd" type="Script" id=5]
[ext_resource path="res://ship_build/theme.tres" type="Theme" id=6]
[ext_resource path="res://fonts/GuiBold.tres" type="DynamicFont" id=7]
[ext_resource path="res://ship_build/stat_bar.tscn" type="PackedScene" id=8]
[ext_resource path="res://ship_build/interpolator.gd" type="Script" id=9]
[ext_resource path="res://ship_build/fade_down_anim.tscn" type="PackedScene" id=10]
[ext_resource path="res://ship_build/upgrade_buttons.gd" type="Script" id=11]
[ext_resource path="res://ship_build/component_img.gd" type="Script" id=12]
[ext_resource path="res://ship_build/build_stats.gd" type="Script" id=13]
[ext_resource path="res://backgrounds/stars.png" type="Texture" id=14]
[ext_resource path="res://backgrounds/galaxy.png" type="Texture" id=15]
[ext_resource path="res://ship_build/sprite_tilemap.gd" type="Script" id=16]
[ext_resource path="res://fonts/Ubuntu-Bold.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://fonts/Gui.tres" type="DynamicFont" id=18]
[ext_resource path="res://ship_build/components/textures/covered.tres" type="Texture" id=19]
[ext_resource path="res://ship_build/components/textures/back_connection.tres" type="Texture" id=20]
[ext_resource path="res://ship_build/components/textures/front_connection.tres" type="Texture" id=21]
[ext_resource path="res://ship_build/components/textures/straight_connection.tres" type="Texture" id=22]

[sub_resource type="GDScript" id=9]
script/source = "extends Sprite

var pos
onready var anim = $anim

func disappear():
  anim.play_backwards(\"appear\")
  pos = null

func init(pos, tile):
  self.pos = pos
  texture = ComponentUtils.component_dict[tile[\"\"]].bottom_texture
  flip_v = false
  position = ComponentUtils.map_to_local(pos)
  rotation = tile.get(\"rotation\", 0)*PI/3
  anim.play(\"appear\")
"

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.501961 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.15, 0.15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "appear"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.501961 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.15, 0.15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 1, 0.498039, 0, 0.117647 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 0.498039, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="GDScript" id=10]
script/source = "extends Control

onready var anim = $anim
onready var text = $container/text
const max_length = 100

func disappear():
  set_anim_state(\"disappear\")
func init(warning):
  if warning == null:
    disappear()
  else:
    text.text = warning.substr(0, max_length)
    set_anim_state(\"appear\")
func hide():
  visible = false

func set_anim_state(animation):
  if anim.assigned_animation != animation:
    anim.play(animation)
"

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "appear"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:margin_top")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.01, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 20, 0.0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "disappear"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.19, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.19 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:margin_top")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.19 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 20 ]
}

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0, 0.717647, 1, 0.0784314 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.717647, 1, 0.541176 )
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.717647, 1, 0.333333 )
border_width_left = 1
border_width_top = 4
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.717647, 1, 0.721569 )
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="build" type="Camera2D"]
current = true
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -80.0 ]
}
type_buttons_path = NodePath("ui/base/toolbar/container/container/buttons/types")
selection_detail_path = NodePath("ui/base/toolbar/container/container/buttons/detail")
warning_path = NodePath("ui/base/toolbar/container/help/warning")
ghost_path = NodePath("map/ghost")

[node name="map" type="Node2D" parent="."]
position = Vector2( 0, -50 )
z_index = 1
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}
grid_color = Color( 0.396078, 0.8, 1, 0.145098 )
coordinate_color = Color( 0.396078, 0.8, 1, 0.556863 )
coordinate_font = ExtResource( 18 )
covered_texture = ExtResource( 19 )
straigth_connection_texture = ExtResource( 22 )
front_connection_texture = ExtResource( 21 )
back_connection_texture = ExtResource( 20 )

[node name="bottom" type="Node2D" parent="map"]
script = ExtResource( 16 )

[node name="mid" type="Node2D" parent="map"]
script = ExtResource( 16 )

[node name="selection" type="Sprite" parent="map"]
modulate = Color( 1, 1, 1, 0.501961 )
scale = Vector2( 0.15, 0.15 )
script = SubResource( 9 )

[node name="anim" type="AnimationPlayer" parent="map/selection"]
anims/RESET = SubResource( 1 )
anims/appear = SubResource( 2 )

[node name="top" type="Node2D" parent="map"]
script = ExtResource( 16 )

[node name="ghost" type="Node2D" parent="map"]
script = ExtResource( 9 )

[node name="img" type="Node2D" parent="map/ghost"]
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 12 )

[node name="base" type="Sprite" parent="map/ghost/img"]
modulate = Color( 1, 1, 1, 0.501961 )

[node name="top" type="Sprite" parent="map/ghost/img"]
modulate = Color( 1, 1, 1, 0.501961 )

[node name="ui" type="CanvasLayer" parent="."]
layer = -1

[node name="base" type="ColorRect" parent="ui"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 6 )
color = Color( 0.0901961, 0.0980392, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="bg" type="TextureRect" parent="ui/base"]
anchor_left = -0.5
anchor_top = -0.5
anchor_right = 1.5
anchor_bottom = 1.5
mouse_filter = 2
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="bg" type="TextureRect" parent="ui/base/bg"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 15 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="stats" type="MarginContainer" parent="ui/base"]
margin_right = 240.0
margin_bottom = 80.0
size_flags_horizontal = 10
script = ExtResource( 13 )
safe_color = Color( 0.172549, 1, 0.494118, 1 )
danger_color = Color( 1, 0.298039, 0.298039, 1 )

[node name="container" type="VBoxContainer" parent="ui/base/stats"]
margin_left = 16.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 99.0

[node name="thrust" parent="ui/base/stats/container" instance=ExtResource( 8 )]
self_modulate = Color( 0, 0.717647, 1, 1 )
max_value = 8.0

[node name="core" parent="ui/base/stats/container" instance=ExtResource( 8 )]
self_modulate = Color( 0, 0.717647, 1, 1 )
margin_top = 29.0
margin_bottom = 54.0
max_value = 8.0

[node name="size" parent="ui/base/stats/container" instance=ExtResource( 8 )]
self_modulate = Color( 0, 0.717647, 1, 1 )
margin_top = 58.0
margin_bottom = 83.0
max_value = 8.0

[node name="wasted_plasma_supply" parent="ui/base/stats/container" instance=ExtResource( 8 )]
visible = false
self_modulate = Color( 1, 0.305882, 0.305882, 1 )
margin_top = 377.0
margin_bottom = 402.0

[node name="plasma_supply" parent="ui/base/stats/container" instance=ExtResource( 8 )]
visible = false
self_modulate = Color( 0.878431, 0.305882, 1, 1 )
margin_top = 377.0
margin_bottom = 402.0

[node name="plasma_energy" parent="ui/base/stats/container" instance=ExtResource( 8 )]
visible = false
self_modulate = Color( 0.878431, 0.305882, 1, 1 )
margin_top = 406.0
margin_bottom = 431.0
max_value = 8.0

[node name="plasma_speed" parent="ui/base/stats/container" instance=ExtResource( 8 )]
visible = false
self_modulate = Color( 0.878431, 0.305882, 1, 1 )
margin_top = 406.0
margin_bottom = 431.0
max_value = 8.0

[node name="toolbar" type="MarginContainer" parent="ui/base"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -454.0
margin_top = -157.0
margin_right = 454.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="container" type="VBoxContainer" parent="ui/base/toolbar"]
margin_left = 16.0
margin_top = 16.0
margin_right = 892.0
margin_bottom = 141.0
mouse_filter = 2

[node name="help" type="HBoxContainer" parent="ui/base/toolbar/container"]
margin_right = 876.0
margin_bottom = 31.0

[node name="rotate" type="PanelContainer" parent="ui/base/toolbar/container/help"]
margin_right = 127.0
margin_bottom = 31.0

[node name="container" type="HBoxContainer" parent="ui/base/toolbar/container/help/rotate"]
margin_left = 8.0
margin_top = 6.0
margin_right = 119.0
margin_bottom = 25.0
size_flags_horizontal = 0

[node name="keystroke" type="Label" parent="ui/base/toolbar/container/help/rotate/container"]
margin_right = 59.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 7 )
text = "[shift] R"

[node name="label" type="Label" parent="ui/base/toolbar/container/help/rotate/container"]
margin_left = 63.0
margin_right = 111.0
margin_bottom = 19.0
text = "Rotate"

[node name="warning" type="PanelContainer" parent="ui/base/toolbar/container/help"]
visible = false
margin_left = 131.0
margin_right = 156.0
margin_bottom = 31.0
size_flags_horizontal = 0
custom_styles/panel = SubResource( 7 )
script = SubResource( 10 )

[node name="anim" parent="ui/base/toolbar/container/help/warning" instance=ExtResource( 10 )]
anims/RESET = SubResource( 12 )
anims/appear = SubResource( 13 )
anims/disappear = SubResource( 14 )

[node name="container" type="HBoxContainer" parent="ui/base/toolbar/container/help/warning"]
margin_left = 8.0
margin_top = 6.0
margin_right = 17.0
margin_bottom = 25.0

[node name="exclamation" type="Label" parent="ui/base/toolbar/container/help/warning/container"]
margin_right = 5.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
text = "!"

[node name="text" type="Label" parent="ui/base/toolbar/container/help/warning/container"]
margin_left = 9.0
margin_right = 9.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 0.498039, 0, 1 )

[node name="container" type="HBoxContainer" parent="ui/base/toolbar/container"]
margin_top = 35.0
margin_right = 876.0
margin_bottom = 125.0
size_flags_vertical = 3

[node name="buttons" type="VBoxContainer" parent="ui/base/toolbar/container/container"]
margin_right = 788.0
margin_bottom = 90.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="types" type="HBoxContainer" parent="ui/base/toolbar/container/container/buttons"]
margin_right = 788.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" parent="ui/base/toolbar/container/container/buttons/types" instance=ExtResource( 10 )]

[node name="core" parent="ui/base/toolbar/container/container/buttons/types" instance=ExtResource( 3 )]
margin_right = 84.0
margin_bottom = 90.0

[node name="thruster" parent="ui/base/toolbar/container/container/buttons/types" instance=ExtResource( 3 )]
margin_left = 88.0
margin_right = 172.0
margin_bottom = 90.0

[node name="generator" parent="ui/base/toolbar/container/container/buttons/types" instance=ExtResource( 3 )]
margin_left = 176.0
margin_right = 260.0
margin_bottom = 90.0

[node name="accelerator" parent="ui/base/toolbar/container/container/buttons/types" instance=ExtResource( 3 )]
margin_left = 264.0
margin_right = 348.0
margin_bottom = 90.0

[node name="energizer" parent="ui/base/toolbar/container/container/buttons/types" instance=ExtResource( 3 )]
margin_left = 352.0
margin_right = 436.0
margin_bottom = 90.0

[node name="turret" parent="ui/base/toolbar/container/container/buttons/types" instance=ExtResource( 3 )]
margin_left = 440.0
margin_right = 524.0
margin_bottom = 90.0

[node name="guiding_turret" parent="ui/base/toolbar/container/container/buttons/types" instance=ExtResource( 3 )]
margin_left = 528.0
margin_right = 612.0
margin_bottom = 90.0

[node name="shield" parent="ui/base/toolbar/container/container/buttons/types" instance=ExtResource( 3 )]
margin_left = 616.0
margin_right = 700.0
margin_bottom = 90.0

[node name="armor" parent="ui/base/toolbar/container/container/buttons/types" instance=ExtResource( 3 )]
margin_left = 704.0
margin_right = 788.0
margin_bottom = 90.0

[node name="detail" type="HBoxContainer" parent="ui/base/toolbar/container/container/buttons"]
visible = false
margin_right = 700.0
margin_bottom = 184.0
size_flags_horizontal = 3
script = ExtResource( 11 )

[node name="anim" parent="ui/base/toolbar/container/container/buttons/detail" instance=ExtResource( 10 )]

[node name="help" type="RichTextLabel" parent="ui/base/toolbar/container/container/buttons/detail"]
margin_right = 700.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 6 )
bbcode_enabled = true

[node name="export" type="Button" parent="ui/base/toolbar/container/container"]
margin_left = 792.0
margin_right = 876.0
margin_bottom = 90.0
rect_min_size = Vector2( 84, 90 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "DONE"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ui/base/toolbar/container/container/export" to="." method="print_ship"]
